# protoflecs

./: .gitmodules  meson.build
resources/vamp/particles/: heal.aseprite
src/: editor.cpp  main.cpp
src/vamp/: aabb.cpp  defines.h  textures.cpp  todo.md  vamp.cpp
src/vamp/components/: octophant.h  particles.h  physics.h  textures.h
src/vamp/helpers/: math.cpp  math.h  physics.cpp  physics.h
